--- a/discover.html
+++ b/discover.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="assets/Logo.png" type="image/x-icon">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SOUNDWAVE</title>
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="index.css">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -13,9 +12,9 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-  </head>
-  <body>
-    <div class="bg">
+</head>
+<body>
+    <div class="bgdiscover">
     <nav>
         <div class="container navbar">
       <a class="logosound" href="/"
@@ -29,14 +28,21 @@
     </div>
     </nav>
     <section>
-      <div class="container hero">
-      <img src="assets/girl.png" alt="girl">
-      <div class="feel_join"><h1>Feel The Music</h1>
-      <p>Stream over 20 thousand songs with one click</p>
-      <button class="join_now">JOIN NOW</button>
-      </div>
-      </div>
+        <div class="container s_discover">
+        <div>
+        <h1>Discover new music</h1>
+        <div class="image_cam">
+            <img src="assets/charts.png" alt="charts">
+            <img src="assets/album.png" alt="album">
+            <img src="assets/more.png" alt="more">
+        </div>
+        <p>By Joining you can benefit by listening to the latest albums released</p>
+        </div>
+        <div>
+            <img src="assets/trench.png" alt="trench" width="100%">
+        </div>
+    </div>
     </section>
-  </div>
-  </body>
+</div>
+</body>
 </html>
