added discover and join

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       >
       <ul>
         <li><a href="discover.html">Discover</a></li>
-        <li><a href="#">Join</a></li>
+        <li><a href="joinform.html">Join</a></li>
       </ul>
       <div class="menu"><i class="fa-solid fa-bars"></i></div>
     </div>
