--- a/joinform.html
+++ b/joinform.html
@@ -15,7 +15,7 @@
     />
 </head>
 <body>
-    <div class="bgdiscover">
+    <div class="joinForm">
     <nav>
         <div class="container navbar">
       <a class="logosound" href="/"
@@ -29,20 +29,17 @@
     </div>
     </nav>
     <section>
-        <div class="container s_discover">
-        <div>
-        <h1>Discover new music</h1>
-        <div class="image_cam">
-            <img src="assets/charts.png" alt="charts">
-            <img src="assets/album.png" alt="album">
-            <img src="assets/more.png" alt="more">
+        <div class="container joinInput"> 
+            <h1 class="joinThe">JOIN THE <span>FUN.</span></h1>
+            <form action="" class="form">
+                <label for="name">Name:</label><br>
+                    <input type="text" id="name" name="name"><br>
+                <label for="email">Email:</label><br>
+                    <input type="email" id="email" name="email"><br>
+                <label for="password">Password:</label><br>
+                    <input type="password" id="password" name="password">
+            </form>
         </div>
-        <p>By Joining you can benefit by listening to the latest albums released</p>
-        </div>
-        <div>
-            <img src="assets/trench.png" alt="trench" width="100%">
-        </div>
-    </div>
     </section>
 </div>
 </body>
